--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
     "scripts": {
       "start:server": "ts-node src/server.ts",
       "start:client": "ts-node src/client.ts",
-      "test": "npx mocha -r ts-node/register tests/*",
+      "test": "npx mocha -r ts-node/register ./tests/*.test.ts",
       "build": "tsc"
     },
     "dependencies": {
       "@grpc/grpc-js": "^1.8.0",
       "@grpc/proto-loader": "^0.7.3",
       "dotenv": "16.4.5",
-      "readline": "1.3.0"
+      "readline": "1.3.0",
+      "ts-node": "10.9.2"
     },
     "devDependencies": {
       "nodemon": "^3.0.0",
       "typescript": "5.7.2",
-      "ts-node": "10.9.2",
       "@types/node": "22.10.0",
       "@types/chai": "5.0.1",
       "@types/mocha": "10.0.10"
