--- a/package.json
+++ b/package.json
@@ -2,28 +2,31 @@
     "name": "node-login",
     "version": "1.0.0",
     "description": "Um projeto Node.js com gRPC para realização de login",
-    "main": "server.js",
+    "main": "src/common/grpc/server.ts",
     "scripts": {
-      "start:server": "ts-node src/server.ts",
-      "start:client": "ts-node src/client.ts",
-      "test": "npx mocha -r ts-node/register ./tests/*.test.ts",
-      "build": "tsc"
+        "start:server": "ts-node src/common/grpc/server.ts",
+        "start:client": "ts-node src/common/grpc/client.ts",
+        "test:unit": "npx mocha -r ts-node/register tests/units/*.test.ts",
+        "test:integration": "npx mocha -r ts-node/register tests/integration/*.test.ts",
+        "build": "tsc"
     },
     "dependencies": {
-      "@grpc/grpc-js": "^1.8.0",
-      "@grpc/proto-loader": "^0.7.3",
-      "dotenv": "16.4.5",
-      "readline": "1.3.0",
-      "ts-node": "10.9.2"
+        "@grpc/grpc-js": "^1.8.0",
+        "@grpc/proto-loader": "^0.7.3",
+        "dotenv": "16.4.5",
+        "readline": "1.3.0"
     },
     "devDependencies": {
-      "nodemon": "^3.0.0",
-      "typescript": "5.7.2",
-      "@types/node": "22.10.0",
-      "@types/chai": "5.0.1",
-      "@types/mocha": "10.0.10"
+        "@types/chai": "5.0.1",
+        "@types/mocha": "10.0.10",
+        "@types/node": "22.10.0",
+        "@types/sinon": "17.0.3",
+        "nodemon": "^3.0.0",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.7.2",
+        "mocha": "10.8.2",
+        "chai": "5.1.2"
     },
-    "author": "Seu Nome",
-    "license": "MIT"
-  }
-  
+    "author": "Marvin Thomaz do Nascimento",
+    "license": ""
+}
