--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "start:server": "ts-node src/common/grpc/server.ts",
         "start:wss-server": "ts-node src/common/websocket/server.ts",
         "start:client": "ts-node src/common/websocket/client.ts",
-        "test:unit": "npx mocha -r ts-node/register tests/units/*.test.ts",
-        "test:integration": "npx mocha -r ts-node/register tests/integration/*.test.ts",
+        "test": "jest",
         "build": "tsc"
     },
     "dependencies": {
@@ -22,15 +21,13 @@
         "@types/readline-sync": "1.4.8"
     },
     "devDependencies": {
-        "@types/chai": "5.0.1",
-        "@types/mocha": "10.0.10",
         "@types/node": "22.10.0",
-        "@types/sinon": "17.0.3",
         "nodemon": "^3.0.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.2",
-        "mocha": "10.8.2",
-        "chai": "5.1.2"
+        "jest": "29.7.0",
+        "@types/jest": "29.5.14",
+        "ts-jest": "29.2.5"
     },
     "author": "Marvin Thomaz do Nascimento",
     "license": ""
